--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
   ],
   "dependencies": {
     "cheerio": "^0.22.0",
+    "csso": "^2.3.1",
     "humps": "^2.0.0",
+    "minimize": "^2.0.0",
     "phantom": "^4.0.0"
   }
 }
