--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "cheerio": "^0.22.0",
     "csso": "^2.3.1",
     "humps": "^2.0.0",
+    "lodash": "^4.17.4",
     "minimize": "^2.0.0",
     "phantom": "^4.0.0"
   }
