--- a/package.json
+++ b/package.json
@@ -20,9 +20,11 @@
   "dependencies": {
     "cheerio": "^0.22.0",
     "csso": "^2.3.1",
+    "fs": "0.0.1-security",
     "humps": "^2.0.0",
     "lodash": "^4.17.4",
     "minimize": "^2.0.0",
-    "phantom": "^4.0.0"
+    "phantom": "^4.0.0",
+    "sync-exec": "^0.6.2"
   }
 }
